--- a/parmenova/Lesson 8/style.css
+++ b/parmenova/Lesson 8/style.css
@@ -37,6 +37,9 @@ form{
     grid-template-columns: repeat(4, 1fr);
     gap: 0.5rem;
     justify-items: start;
-    
+    background-color: rgba(0, 0, 0, 0.296);
+    padding: 1rem;
+    border-radius: 1rem;
+    color: white;
 
 }
