--- a/MarkAseew228/lesson 11-12/style.css
+++ b/MarkAseew228/lesson 11-12/style.css
@@ -15,12 +15,14 @@
     gap: 0.3rem;
 }
 
-button {
+button,
+a#download {
     border: none;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     border-radius: 5px;
-    box-shadow: 2px 3px black
+    box-shadow: 2px 3px black;
+    text-decoration: none;
 }
 
 canvas {
