--- a/bondorenko/lesson 13/style.css
+++ b/bondorenko/lesson 13/style.css
@@ -16,12 +16,13 @@
 
 }
 
-button{
+button, a#download{
     border: none;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     border-radius: 5px;
     box-shadow: 2px 3px black;
+    text-decoration: none;
 }
 
 canvas{
