--- a/ХЗ/lesson 11-12/style.css
+++ b/ХЗ/lesson 11-12/style.css
@@ -14,18 +14,18 @@
     gap: 0.5rem;
 }
 
-button {
+button, a#download {
     border: none;
     background-color: rgba(235, 236, 236, 0.292);
     color: white;
     border-radius: 5px;
     box-shadow: 2px 3px rgba(96, 128, 141, 0.135);
+    text-decoration: none;
 }
 
 canvas {
-    position: fixed;
-    border: 1px solid;
-    top: 3rem;
-    height: 91vh;
-    width: 97ww;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -10;
 }
