--- a/SNitkovKIJ/Flappy4JS/Flappy4JS/style.css
+++ b/SNitkovKIJ/Flappy4JS/Flappy4JS/style.css
@@ -7,4 +7,21 @@ body{
     justify-content: center;
     align-items: center; 
     height: 100vh;
+    background: radial-gradient(circle, red, black);
+}
+
+
+.textBar {
+    display: flex;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    gap: 2rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white
+}
+
+button {
+    margin-top: 1rem;
+    font-size: 2rem;
+    
 }
