--- a/52GANG/Flappy4JS/Flappy4JS/style.css
+++ b/52GANG/Flappy4JS/Flappy4JS/style.css
@@ -1,10 +1,26 @@
 canvas {
     border: 1px solid black;
 }
+
 body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background: radial-gradient(circle, wheat 20%, grey);
+}
+
+.textBar {
+    display: flex;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    gap: 2rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: wheat;
+}
+
+button {
+    margin-top: 1rem;
+    font-size: 2rem;
 }
