--- a/SNitkovKIJ/Flappy4JS/Flappy4JS/style.css
+++ b/SNitkovKIJ/Flappy4JS/Flappy4JS/style.css
@@ -25,3 +25,16 @@ button {
     font-size: 2rem;
     
 }
+.wrapper{
+    position: relative;
+
+}
+
+.box{
+    width: 256px;
+    height: 512px;
+    position: absolute ;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    display: none;
+}
