--- a/Feduk/Flappy4JS/Flappy4JS/style.css
+++ b/Feduk/Flappy4JS/Flappy4JS/style.css
@@ -8,4 +8,37 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background: radial-gradient(circle, yellow 20% ,  blue);
+}
+
+.textBar{
+    display: flex;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    gap: 2ram;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white;
+}
+
+button{
+    margin-top: 1rem;
+    font-size: 2rem;
+}
+
+.wrapper {
+    position: relative;
+}
+
+.box {
+    width: 256px;
+    height: 512px;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    display: none;
+}
+.box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
