--- a/Petrash/Flappy4JS/Flappy4JS/style.css
+++ b/Petrash/Flappy4JS/Flappy4JS/style.css
@@ -18,9 +18,23 @@ body{
     gap: 2rem;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
+    margin-top: 1.5rem;
 }
 
 button{
     margin-top: 1rem;
     font-size: 2rem;
+}
+
+.wrapper{
+    position: relative;
+}
+
+.box{
+    width: 256px;
+    height: 512px;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0,5);
+    top: 0;
+    display: none;
 }
