--- a/bondorenko/Flappy4JS/Flappy4JS/style.css
+++ b/bondorenko/Flappy4JS/Flappy4JS/style.css
@@ -24,3 +24,22 @@ button{
     margin-top: 1rem;
     font-size: 2rem;
 }
+
+.wrapper{
+    position: relative;
+}
+
+.box{
+    width: 256px;
+    height: 512px;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    display: none;
+}
+
+.box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
