--- a/Hordynska Elina/Christmas/style.css
+++ b/Hordynska Elina/Christmas/style.css
@@ -27,13 +27,17 @@ body {
 }
 
 .head {
-    padding: 10px 0px 8px 0px;
+    padding: 20px 0px 10px 0px;
+}
+
+.xmas img{
+    padding: 7px;
 }
 
 .year {
     font-size: 20px;
     font-weight: 600;
-    padding: 5px;
+    padding: 4px 0px 10px;
 }
 
 .tree1 {
